--- a/package.json
+++ b/package.json
@@ -20,12 +20,16 @@
   },
   "homepage": "https://github.com/mchung1128/bucketlist#readme",
   "dependencies": {
+    "@material-ui/core": "^4.3.2",
+    "@material-ui/icons": "^4.2.1",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongoose": "^5.6.9",
     "mysql": "^2.17.1",
     "react": "^16.9.0",
-    "react-dom": "^16.9.0"
+    "react-dom": "^16.9.0",
+    "react-modal": "^3.9.1",
+    "styled-components": "^4.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
